<resources xmlns:tools="http://schemas.android.com/tools" xmlns:moz="http://schemas.android.com/apk/res-auto">
    <string name="mozac_feature_addons_permissions_privacy_description">Read and modify privacy settings</string>
    <string name="mozac_feature_addons_permissions_all_urls_description">Access your data for all websites</string>
    <string name="mozac_feature_addons_permissions_one_site_description">Access your data for %1$s</string>
    <string name="mozac_feature_addons_permissions_sites_in_domain_description">Access your data for sites in the %1$s domain</string>
    <string name="mozac_feature_addons_permissions_one_extra_site_description" tools:ignore="PluralsCandidate">Access your data on 1 other site</string>
    <string name="mozac_feature_addons_permissions_extra_sites_description" tools:ignore="PluralsCandidate">Access your data on %1$d other sites</string>
    <string name="mozac_feature_addons_permissions_one_extra_domain_description" tools:ignore="PluralsCandidate">Access your data on 1 other domain</string>
    <string name="mozac_feature_addons_permissions_extra_domains_description_plural" tools:ignore="PluralsCandidate">Access your data on %1$d other domains</string>
    <string name="mozac_feature_addons_permissions_all_domain_count_description" tools:ignore="PluralsCandidate">Access your data for sites in %1$d domains</string>
    <string name="mozac_feature_addons_permissions_content_description_item">%1$s, %2$d of %3$d</string>
    <string name="mozac_feature_addons_permissions_tabs_description">Access browser tabs</string>
    <string name="mozac_feature_addons_permissions_web_navigation_description">Access browser activity during navigation</string>
    <string name="mozac_feature_addons_permissions_bookmarks_description">Read and modify bookmarks</string>
    <string name="mozac_feature_addons_permissions_browser_setting_description">Read and modify browser settings</string>
    <string name="mozac_feature_addons_permissions_browser_data_description">Clear recent browsing history, cookies, and related data</string>
    <string name="mozac_feature_addons_permissions_clipboard_read_description">Get data from the clipboard</string>
    <string name="mozac_feature_addons_permissions_clipboard_write_description">Input data to the clipboard</string>
    <string name="mozac_feature_addons_permissions_declarative_net_request_description">Block content on any page</string>
    <string name="mozac_feature_addons_permissions_declarative_net_request_feedback_description">Read your browsing history</string>
    <string name="mozac_feature_addons_permissions_downloads_description">Download files and read and modify the browser’s download history</string>
    <string name="mozac_feature_addons_permissions_downloads_open_description">Open files downloaded to your device</string>
    <string name="mozac_feature_addons_permissions_find_description">Read the text of all open tabs</string>
    <string name="mozac_feature_addons_permissions_geolocation_description">Access your location</string>
    <string name="mozac_feature_addons_permissions_history_description">Access browsing history</string>
    <string name="mozac_feature_addons_permissions_management_description">Monitor extension usage and manage themes</string>
    <string name="mozac_feature_addons_permissions_native_messaging_description">Exchange messages with apps other than this one</string>
    <string name="mozac_feature_addons_permissions_notifications_description">Display notifications to you</string>
    <string name="mozac_feature_addons_permissions_pkcs11_description">Provide cryptographic authentication services</string>
    <string name="mozac_feature_addons_permissions_proxy_description">Control browser proxy settings</string>
    <string name="mozac_feature_addons_permissions_sessions_description">Access recently closed tabs</string>
    <string name="mozac_feature_addons_permissions_tab_hide_description">Hide and show browser tabs</string>
    <string name="mozac_feature_addons_permissions_top_sites_description">Access browsing history</string>
    <string name="mozac_feature_addons_permissions_trial_ml_description">Download and run AI models on your device</string>
    <string name="mozac_feature_addons_permissions_user_scripts_description">Allow unverified third-party scripts to access your data</string>
    <string name="mozac_feature_addons_permissions_user_scripts_extra_warning">Unverified scripts can pose security and privacy risks. Only run scripts from extensions or sources you trust.</string>
    <string name="mozac_feature_addons_permissions_required_data_collection_description" moz:removedIn="141" tools:ignore="UnusedResources">The developer says this extension collects: %1$s.</string>
    <string name="mozac_feature_addons_permissions_required_data_collection_description_2">The developer says this extension collects: %1$s</string>
    <string name="mozac_feature_addons_permissions_none_required_data_collection_description">The developer says this extension doesn’t require data collection.</string>
    <string name="mozac_feature_addons_permissions_data_collection_optional_description">The developer says the extension wants to collect: %1$s</string>
    <string name="mozac_feature_addons_permissions_devtools_description">Extend developer tools to access your data in open tabs</string>
    <string name="mozac_feature_addons_permissions_show_all_sites">Show all sites</string>
    <string name="mozac_feature_addons_permissions_show_fewer_sites">Show fewer sites</string>
    <string name="mozac_feature_addons_permissions_data_collection_authenticationInfo_short_description">authentication information</string>
    <string name="mozac_feature_addons_permissions_data_collection_bookmarksInfo_short_description">bookmarks</string>
    <string name="mozac_feature_addons_permissions_data_collection_browsingActivity_short_description">browsing activity</string>
    <string name="mozac_feature_addons_permissions_data_collection_financialAndPaymentInfo_short_description">financial and payment information</string>
    <string name="mozac_feature_addons_permissions_data_collection_healthInfo_short_description">health information</string>
    <string name="mozac_feature_addons_permissions_data_collection_locationInfo_short_description">location</string>
    <string name="mozac_feature_addons_permissions_data_collection_personalCommunications_short_description">personal communications</string>
    <string name="mozac_feature_addons_permissions_data_collection_personallyIdentifyingInfo_short_description">personally identifying information</string>
    <string name="mozac_feature_addons_permissions_data_collection_searchTerms_short_description">search terms</string>
    <string name="mozac_feature_addons_permissions_data_collection_technicalAndInteraction_short_description">technical and interaction data</string>
    <string name="mozac_feature_addons_permissions_data_collection_websiteActivity_short_description">website activity</string>
    <string name="mozac_feature_addons_permissions_data_collection_websiteContent_short_description">website content</string>
    <string name="mozac_feature_addons_permissions_data_collection_authenticationInfo_long_description">Share authentication information with extension developer</string>
    <string name="mozac_feature_addons_permissions_data_collection_bookmarksInfo_long_description">Share bookmarks information with extension developer</string>
    <string name="mozac_feature_addons_permissions_data_collection_browsingActivity_long_description">Share browsing activity with extension developer</string>
    <string name="mozac_feature_addons_permissions_data_collection_financialAndPaymentInfo_long_description">Share financial and payment information with extension developer</string>
    <string name="mozac_feature_addons_permissions_data_collection_healthInfo_long_description">Share health information with extension developer</string>
    <string name="mozac_feature_addons_permissions_data_collection_locationInfo_long_description">Share location information with extension developer</string>
    <string name="mozac_feature_addons_permissions_data_collection_personalCommunications_long_description">Share personal communications with extension developer</string>
    <string name="mozac_feature_addons_permissions_data_collection_personallyIdentifyingInfo_long_description">Share personally identifying information with extension developer</string>
    <string name="mozac_feature_addons_permissions_data_collection_searchTerms_long_description">Share search terms with extension developer</string>
    <string name="mozac_feature_addons_permissions_data_collection_technicalAndInteraction_long_description">Share technical and interaction data with extension developer</string>
    <string name="mozac_feature_addons_permissions_data_collection_websiteActivity_long_description">Share website activity with extension developer</string>
    <string name="mozac_feature_addons_permissions_data_collection_websiteContent_long_description">Share website content with extension developer</string>
    <string name="mozac_feature_addons_version">Version</string>
    <string name="mozac_feature_addons_author">Author</string>
    <string name="mozac_feature_addons_last_updated">Last updated</string>
    <string name="mozac_feature_addons_home_page">Homepage</string>
    <string name="mozac_feature_addons_learn_more">Learn more about permissions</string>
    <string name="mozac_feature_addons_rating">Rating</string>
    <string name="mozac_feature_addons_more_info_link_2">More about this extension</string>
    <string name="mozac_feature_addons_settings">Settings</string>
    <string name="mozac_feature_addons_settings_on">On</string>
    <string name="mozac_feature_addons_settings_allow_in_private_browsing" moz:removedIn="141" tools:ignore="UnusedResources">Allow in private browsing</string>
    <string name="mozac_feature_addons_settings_allow_in_private_browsing_2">Allow extension to run in private browsing</string>
    <string name="mozac_feature_addons_settings_run_in_private_browsing">Run in private browsing</string>
    <string name="mozac_feature_addons_not_allowed_in_private_browsing">Not allowed in private windows</string>
    <string name="mozac_feature_addons_enabled">Enabled</string>
    <string name="mozac_feature_addons_installed_section">Installed</string>
    <string name="mozac_feature_addons_recommended_section">Recommended</string>
    <string name="mozac_feature_addons_unsupported_section">Not yet supported</string>
    <string name="mozac_feature_addons_unavailable_section">Not yet available</string>
    <string name="mozac_feature_addons_disabled_section">Disabled</string>
    <string name="mozac_feature_addons_details">Details</string>
    <string name="mozac_feature_addons_permissions">Permissions</string>
    <string name="mozac_feature_addons_remove">Remove</string>
    <string name="mozac_feature_addons_report">Report</string>
    <string name="mozac_feature_addons_permissions_dialog_heading_optional_settings">Optional settings:</string>
    <string name="mozac_feature_addons_permissions_dialog_add">Add</string>
    <string name="mozac_feature_addons_permissions_dialog_learn_more">Learn more</string>
    <string name="mozac_feature_addons_permissions_dialog_cancel">Cancel</string>
    <string name="mozac_feature_addons_status_learn_more">Learn more</string>
    <string name="mozac_feature_addons_status_see_details">See details</string>
    <string name="mozac_feature_addons_status_softblocked_1">This extension is restricted for violating Mozilla’s policies and has been disabled. You can enable it, but this may be risky.</string>
    <string name="mozac_feature_addons_status_unsigned">%1$s could not be verified as secure and has been disabled.</string>
</resources>